# shared_control

./: CMakeLists.txt  final_cube.pcd
scripts/: final_cube.pcd  initialization.py  initialization.py~  move_robot.py~  move_robot_all.py  move_robot_all.py~  pose_estimation_all.py  pose_estimation_all.py~  robot_rot.py  robot_rot.py~  robot_trans.py  robot_trans.py~  rpy2vector.py  run_all.py~  teleop_BCI.py  teleop_BCI.py~  teleop_key.py  teleop_key.py~  test_move.py  test_move.py~  test_move2.py  test_move2.py~  tool0_position_pub.py  tool0_position_pub.py~
scripts/2018-2-1data/: 21.bag  210.bag  211.bag  212.bag  213.bag  214.bag  215.bag  216.bag  217.bag  218.bag  219.bag  22.bag  220.bag  221.bag  222.bag  223.bag  224.bag  225.bag  226.active  227.bag  228.bag  229.bag  23.bag  230.bag  231.bag  232.active  233.bag  234.bag  235.bag  236.bag  237.bag  238.bag  239.bag  24.bag  240.bag  241.bag  242.bag  243.bag  244.bag  245.bag  (+89 more)
src/: final_cube.pcd  serial_receiver.cpp  serial_receiver.cpp~  target_pose_estimation.cpp
